# fit-ai

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_SLIDE.md  AWS_DEPLOYMENT_GUIDE.md  MARKET_ANALYSIS.md  MULTI_AGENT_VISION.md  PRESENTATION_ROADMAP.md  PRESENTATION_STRATEGY.md  README.md  TARGET_SETUP_AND_TRACKING_INTEGRATION.md  TRACKING_IMPLEMENTATION_GUIDE.md  TRACKING_PAGE_DESIGN.md  WORKOUT_PLANNER.md
backend/: context.py  database.py  delete_opensearch_index.py  deploy.py  document_processor.py  dynamodb_adapter.py  embeddings.py  energy_calculator.py  food_database.py  ingest_documents.py  models.py  pyproject.toml  requirements-lambda.txt  requirements.txt  retrieval.py  server.py  upload_to_opensearch.py  vector_store.py  workout_planner.py
backend/data/: facts.json  style.txt  summary.txt
backend/data/tracking/: daily_summaries.json  nutrition_logs.json  user_profiles.json  workout_plans.json
backend/documents/: README.md
frontend/: next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/calculator/: page.tsx
frontend/app/chatbot/: page.tsx
frontend/app/tracking/dashboard/: page.tsx
frontend/app/tracking/nutrition/: page.tsx
frontend/app/tracking/progress/: page.tsx
frontend/app/tracking/weight/: page.tsx
frontend/app/workout-planner/: page.tsx
frontend/components/: energy-calculator.tsx  health-chat.tsx  navigation.tsx  workout-planner.tsx
scripts/: deploy.sh  destroy.sh
terraform/: dynamodb.tf  main.tf  opensearch.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
(+1 files in other folders)
